--- a/style.css
+++ b/style.css
@@ -11,16 +11,37 @@ body{
     padding-top:30px;
     padding-bottom:30px;
 }
+/*CSS Media Query*/
+@media (max-width:500px){
+    /*螢幕尺寸小於500像素的時候，額外套用這個區域的設定*/
+    .header{
+        font-size:30px;
+    }
+}
 .nav{
     font-size:24pz;
     text-align:center;
     height:50px;
     line-height:50px;
 }
+
 /*階層式的選擇器*/
 .nav>.item{
     padding:20px;
-    cursor:pinter;
+    cursor:pointer;
+}
+@media (max-width:500px){
+    .nav{
+        white-space:nowrap;
+        overflow-x:auto;
+    }
+    /*選項少的時候 讓他變小*/  
+    /*.nav{
+        font-size:20px;
+    }
+    .nav>.item{
+        padding:15px 10px;
+    }*/
 }
 /*虛擬選擇器，和其他選擇器搭配*/
 .nav>.item:hover{
@@ -50,17 +71,40 @@ body{
     text-align:center;
 }
 .content>.right{
-    widows: 600px;
+    widows: 400px;
     font-size:24px;
     line-height:40px;
     text-align:center;
 }
 /* .left 中的細節*/
 .content>.left>.head{
-    width:300px;height:300px;
+    width:400px;height:400px;
     border-radius:50%;
 }
+@media (max-width:500px){
+    .content{
+        flex-wrap:wrap;/*讓flexbox 中的區塊可以往下掉 WHEN寬度不夠的時候*/
+    }
+    .content>.left{
+        width:95%;
+    }
+    .content>.right{
+        width:95%;
+    }
+    .content>.left>.head{
+        width:90%;height;auto;
+    }
+}
+
 /*right 中的細節*/
 .content>.right>.title{
     font-weight:bold;
+}
+
+/*footer*/
+.footer{
+    background-color:#223344;
+    color:white;font-size:24px;
+    text-align: center;
+    padding:40px 0px;
 }
